services/checkout-svc/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkout-svc
  labels:
    app: checkout-svc
    app.kubernetes.io/part-of: ecommerce-platform
spec:
  type: ClusterIP
  selector:
    app: checkout-svc
  ports:
    - name: http
      port: 8083
      targetPort: http
